# WLED-Native

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Native-Port-Plan.md  package.json  readme.md
.codex/: hooks.json
.codex/hooks/: native_port_prompt_reminder.py  native_port_stop_check.py
.github/: agent-build.instructions.md  copilot-instructions.md
.github/workflows/: wled-ci.yml
docs/: cicd.instructions.md  native-porting.md
docs/superpowers/plans/: 2026-05-28-wled-native-core.md
lib/: README
native/: main.cpp
native/arduino_compat/: Arduino.cpp  Arduino.h  IPAddress.cpp  IPAddress.h  Print.cpp  Print.h  Stream.h  WString.cpp  WString.h
native/core/: NativeWledCore.cpp  NativeWledCore.h
native/fs/: LittleFS.cpp  LittleFS.h
native/http/: NativeHttpServer.cpp  NativeHttpServer.h
native/net/: Network.cpp  Network.h
native/output/: RenderBuffer.cpp  RenderBuffer.h
native/runtime/: Runtime.cpp  Runtime.h  SignalHandling.cpp  SignalHandling.h
native/tests/: cli-smoke.sh  test_arduino_compat.cpp  test_core.cpp  test_fs.cpp  test_http.cpp  test_network.cpp  test_output.cpp  test_runtime.cpp  test_signal_handling.cpp
scripts/: native-build.sh  native-run.sh  native-test.sh
test/: README  native-browser-storage.test.js  native-cli.test.js  native-repo-cleanup.test.js
tools/: cdata-test.js  cdata.js
usermods/: readme.md
usermods/Cronixie/: readme.md
usermods/EXAMPLE/: readme.md
usermods/PS_Comet/: README.md
usermods/TetrisAI_v2/: readme.md
usermods/audioreactive/: readme.md
usermods/boblight/: readme.md
usermods/seven_segment_display/: readme.md
usermods/seven_segment_display_reloaded/: readme.md
usermods/smartnest/: readme.md
usermods/user_fx/: README.md
usermods/usermod_v2_HttpPullLightControl/: readme.md  usermod_v2_HttpPullLightControl.h
usermods/usermod_v2_animartrix/: readme.md
usermods/usermod_v2_auto_save/: readme.md  usermod_v2_auto_save.cpp
usermods/usermod_v2_brightness_follow_sun/: README.md
usermods/usermod_v2_ping_pong_clock/: readme.md
usermods/usermod_v2_word_clock/: readme.md
wled00/: bus_manager.cpp  cfg.cpp  colors.cpp  colors.h  const.h  file.cpp  my_config_sample.h  playlist.cpp  presets.cpp  prng.h  udp.cpp  wled.h  wled_host_cfg.h  wled_host_cli.cpp  wled_host_cli.h  wled_host_core.cpp  wled_host_core.h  wled_host_file.h  wled_host_main.cpp  wled_host_playlist.cpp  wled_host_playlist.h  wled_host_presets.h  wled_host_runtime.cpp  wled_host_runtime.h  wled_host_runtime_state.h  wled_host_server.cpp  wled_host_server.h  wled_host_storage.cpp  wled_host_storage.h  wled_host_usermod.cpp  wled_host_usermod.h  wled_main.cpp
wled00/data/: index.js
